sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: illegal start of simple expression
      if ([j]>[j+1])
          ^AlgBubbleSort2:8: error: ')' expected but '}' found.
    }
    ^